# symor

./: .gitignore  CMD.md  Cargo.toml  README.md  TREAT.md  build.sh  osxcross
.cargo/: config.toml
legal/: bbl_software_license.md  pp.md  tos.md
releases/: sym_aarch64_apple_darwin  sym_aarch64_unknown_linux_musl  sym_i686_pc_windows_gnu  sym_x86_64_apple_darwin  sym_x86_64_pc_windows_gnu  sym_x86_64_unknown_linux_musl
src/: lib.rs  main.rs  tests.rs
src/config/: mod.rs  templates.rs  validation.rs
src/errors/: mod.rs  recovery.rs  types.rs
src/monitoring/: mod.rs  notifications.rs  progress.rs
src/performance/: incremental.rs  mod.rs  parallel.rs
src/tui/: app.rs  handlers.rs  mod.rs  views.rs
src/versioning/: detector.rs  mod.rs  restore.rs  storage.rs
